k-Means final Version bis Aufgabenblatt

--- a/book/ki/ki_allgemein.ipynb
+++ b/book/ki/ki_allgemein.ipynb
@@ -98,7 +98,7 @@
     "Lernrate  \n",
     ": Ein Hyperparameter, der bestimmt, wie groß die Schritte beim [Gradientenabstieg](#gradientenabstieg) sind. Eine zu hohe Lernrate kann das Lernen instabil machen, eine zu niedrige führt zu langsamen Fortschritten.\n",
     "\n",
-    "(manattan-distanz)=\n",
+    "(manhattan-distanz)=\n",
     "Manhattan-Distanz  \n",
     ": Eine Distanzmetrik, die die Summe der absoluten Differenzen zwischen den Koordinaten zweier Punkte berechnet. (s. [Distanzmaße](#distanzmasse)). Beispiel: Die Manhattan-Distanz zwischen den Punkten (1, 2) und (4, 6) beträgt $|1-4| + |2-6| = 7$.\n",
     "\n",
