--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -4,13 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# k-Means-Clustering\n",
-    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit Trainingsdaten neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/K-Means-Algorithmus), einen Algorithmus zur Gruppierung von Daten in sogenannte Cluster.\n",
+    "```{margin}\n",
+    "Shortlink: https://shorturl.at/cpKzH\n",
+    "```\n",
     "\n",
-    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. k-Means ist ein Clustering-Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in k Cluster einteilt. Das macht k-Means zu einem unüberwachten Lernalgorithmus. Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
+    "# k-Means-Clustering\n",
+    "Du kennst bereits den [k-Nächste-Nachbarn-Algorithmus](knearestneighbor), ein Verfahren, das mit [Trainingsdaten](#trainingsdaten) neue Daten klassifiziert. Nun betrachten wir [k-Means-Clustering](https://de.wikipedia.org/wiki/K-Means-Algorithmus), einen Algorithmus, um [Datenpunkte](#datenpunkt) in sogenannte Cluster zu gruppieren.\n",
+    "\n",
+    "Im Bereich der KI wird oft mit großen Datenmengen gearbeitet, die auf Muster untersucht und in Gruppen eingeteilt werden. k-Means ist so ein Clustering-Algorithmus, der Datenpunkte ohne vorherige Kenntnis der Gruppenzugehörigkeit in k Cluster einteilt. Das macht k-Means zu einem [unüberwachten Lernalgorithmus](#unueberwachtes-lernen). Seine Stärke liegt in der effizienten Strukturierung großer Datensätze und dem Entdecken versteckter Muster.\n",
     "\n",
     "```{margin}\n",
-    "[Maschinelles Lernen](https://de.wikipedia.org/wiki/Maschinelles_Lernen) ist ein Teilgebiet der KI, bei dem Algorithmen aus Daten lernen und Vorhersagen oder Entscheidungen treffen können. Algorithmen im Bereich des maschinellen Lernens haben das Ziel, große Datenmengen zu analysieren und Muster darin zu erkennen.\n",
+    "[Maschinelles Lernen](https://de.wikipedia.org/wiki/Maschinelles_Lernen) ist ein Teilgebiet der KI, in dem Algorithmen aus Daten lernen und Vorhersagen oder Entscheidungen treffen können. Algorithmen im Bereich des maschinellen Lernens haben das Ziel, große Datenmengen zu analysieren und Muster darin zu erkennen.\n",
     "```"
    ]
   },
@@ -20,9 +24,9 @@
    "source": [
     "## Überwachtes vs. unüberwachtes Lernen\n",
     "\n",
-    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Eingabedaten und die zugehörigen Zielwerte (**Label**) enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der [k-Nächste-Nachbarn-Algorithmus](knearestneighbor) ist ein solches Verfahren.\n",
+    "Beide Algorithmen stammen aus dem Bereich **Maschinelles Lernen**, welches grob in **überwachtes Lernen** und **unüberwachtes Lernen** unterteilt wird. Beim [überwachten Lernen](https://de.wikipedia.org/wiki/Überwachtes_Lernen) wird ein Datensatz verwendet, der Trainingsdaten mit den zugehörigen **Labels** enthält. Das Modell lernt aus Beispielen, bei denen die richtigen Antworten bereits bekannt sind. Diese Methode eignet sich gut für Aufgaben wie Klassifikationen (z.B. Spam-Erkennung). Der [k-Nächste-Nachbarn-Algorithmus](knearestneighbor) ist ein solches Verfahren.\n",
     "\n",
-    "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) gibt es keine gelabelten Trainingsdaten. Stattdessen versuchen unüberwachte Algorithmen, Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus findet eigenständig Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
+    "Beim [unüberwachten Lernen](https://de.wikipedia.org/wiki/Unüberwachtes_Lernen) gibt es keine gelabelten Trainingsdaten. Stattdessen versuchen unüberwachte Algorithmen, eigenständig Muster in den Daten zu erkennen. Clustering, wie k-Means, ist ein typisches Beispiel dafür. Der Algorithmus findet eigenständig Gruppen (Cluster) von ähnlichen Datenpunkten und hilft, ungeordnete Daten zu strukturieren."
    ]
   },
   {
@@ -31,11 +35,11 @@
    "source": [
     "## Einführung in das Verfahren\n",
     "\n",
-    "k-Means-Clustering gehört zum **unüberwachten Lernen**. Wir haben keine vordefinierten Labels, sondern nur die rohen Daten. Das Ziel von k-Means ist es, die Daten in **k Cluster** zu unterteilen, wobei *k* die Anzahl der Cluster darstellt. Der Algorithmus ermittelt **Zentroiden**, also Mittelpunkte, um die sich die Cluster bilden. **Means** steht dabei für den Durchschnitt, da die Zentroiden als Durchschnitt der zugehörigen Datenpunkte berechnet werden. Am Ende sind die Daten innerhalb eines Clusters homogener als zu den Daten in anderen Clustern.\n",
+    "k-Means-Clustering gehört zum **unüberwachten Lernen**. Es gibt keine vordefinierten Labels, sondern nur die rohen Daten. Das Ziel von k-Means ist es, die Daten in **k Cluster** zu unterteilen, wobei **k** die Anzahl der Cluster darstellt. Der Algorithmus ermittelt **Zentroiden**, also Mittelpunkte, um die sich die Cluster bilden. **Means** steht dabei für den Durchschnitt, da die Zentroiden als Durchschnitt der zugehörigen Datenpunkte berechnet werden. Am Ende sind die Daten innerhalb eines Clusters homogener als zu den Daten in anderen Clustern.\n",
     "\n",
-    "In einfachen Beispielen könnten wir die Cluster auch mit dem Auge erkennen und auch ablesen, welche Zahl für *k* sinnvoll wäre. Bei großen Datenmengen oder nicht eindeutigen Clustern benötigen wir dann aber die Hilfe des Algorithmus.\n",
+    "In einfachen Beispielen könnten wir die Cluster auch mit dem Auge erkennen und auch ablesen, welche Zahl für **k** sinnvoll wäre. Bei großen Datenmengen oder nicht eindeutigen Clustern benötigen wir dann aber die Hilfe des Algorithmus.\n",
     "\n",
-    "**Aufgabe 1:** Wie würdest du die folgenden Daten in Cluster aufteilen?\n",
+    "**Aufgabe 1:** Wie würdest du denn die folgenden Daten in Cluster aufteilen?\n",
     "\n",
     "```{figure} bilder/kmeans_3_cluster_einfach_datenpunkte.svg\n",
     "---\n",
@@ -80,33 +84,17 @@
     "---\n",
     "Ergebnis des k-Means-Clustering mit k=4\n",
     "```\n",
-    "Dieses Beispiel ist nicht so trivial wie das vorige. Mit bloßem Auge lassen sich  die Cluster nicht ablesen.\n",
-    "``````"
+    "Dieses Beispiel ist nicht so trivial wie das vorige. Mit bloßem Auge lassen sich  die Cluster nicht ablesen. \n",
+    "``````\n",
+    "\n",
+    "Mit Hilfe des k-Means-Clustering können die Daten also sinnvoll unterteilt werden. Aber wie macht der Algorithmus das überhaupt? 🤔"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reale Anwendungsbeispiele\n",
-    "\n",
-    "Welche realen Anwendungsbeispiele kannst du dir vorstellen, bei denen das k-means Clustering sinnvoll eingesetzt werden könnte?\n",
-    "\n",
-    "Überlege dabei, in welchen Bereichen es wichtig sein könnte, Daten in Gruppen aufzuteilen, ohne dass bereits vorgegeben ist, zu welcher Gruppe ein Datenpunkt gehört. Welche Situationen kennst du, in denen Menschen, Dinge oder Objekte aufgrund ihrer Ähnlichkeit in Gruppen eingeteilt werden? Es gibt hier keine richtige Antwort, nur eine Auswahl an möglichen Einsatzszenarien.\n",
-    "\n",
-    "```{admonition} Beispiele\n",
-    ":class: tip, dropdown\n",
-    "- *Marketing*: Kunden in verschiedene Segmente aufteilen. Dadurch können Unternehmen gezieltere Werbung schalten und ihre Produkte effizienter an die verschiedenen Kundengruppen anpassen.\n",
-    "- *Bildanalyse*: ähnliche Regionen in Bildern finden. Das ist besonders nützlich für die Objekterkennung. Hierbei hilft der Algorithmus, verschiedene Objekte in einem Bild zu identifizieren und zu klassifizieren.\n",
-    "- *Biologie*: Forscher nutzen den Algorithmus, um ähnliche Gene oder Spezies zu gruppieren. Dies kann helfen, neue Erkenntnisse über genetische Verbindungen und Unterschiede zu gewinnen und die Evolution besser zu verstehen.\n",
-    "- *Textanalyse*: Zum Beispiel kann der Algorithmus eingesetzt werden, um ähnliche Dokumente oder Artikel zu gruppieren, was bei der Organisation großer Textmengen hilfreich ist. In der Finanzwelt wird k-Means genutzt, um riskante von nicht riskanten Krediten zu unterscheiden, indem ähnliche Kreditprofile gruppiert werden.\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "(k-means-algorithmus)=\n",
     "## Der k-means-Clustering Algorithmus\n",
     "\n",
     "Der Ablauf des k-means-Clustering Algorithmus wird in folgende Schritte aufgeteilt:\n",
@@ -119,7 +107,7 @@
     "Als nächstes werden **k** Datenpunkte aus den Daten oder **k** zufällige Punkte ausgewählt, um die anfänglichen **Zentroiden** (Cluster-Zentren) zu bestimmen.\n",
     "\n",
     "**3. Zuweisung der Datenpunkte und Bildung der Cluster**  \n",
-    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die Messung der Entfernung zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder Manhattan Distanz).\n",
+    "Jeder Datenpunkt wird dem nächstgelegenen Zentroiden zugewiesen. Dies wird durch die [Distanzmaße](distanzmasse) zu allen Zentroiden bestimmt (z.B. mittels Euklidischer Distanz oder [Manhattan Distanz](#manhattan-distanz)).\n",
     "\n",
     "**4. Aktualisierung der Zentroiden**  \n",
     "Die Zentroiden werden neu berechnet, indem der Durchschnitt (**Mean**) aller Punkte innerhalb eines Clusters berechnet wird.\n",
@@ -158,11 +146,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Reale Anwendungsbeispiele\n",
+    "\n",
+    "Welche realen Anwendungsbeispiele kannst du dir vorstellen, bei denen das k-means Clustering eingesetzt werden könnte?\n",
+    "\n",
+    "Überlege dabei, in welchen Bereichen es wichtig sein könnte, Daten in Gruppen aufzuteilen, ohne dass bereits vorgegeben ist, zu welcher Gruppe ein Datenpunkt gehört. Welche Situationen kennst du, in denen Menschen, Dinge oder Objekte aufgrund ihrer Ähnlichkeit in Gruppen eingeteilt werden? Es gibt hier keine richtige Antwort, nur eine Auswahl an möglichen Einsatzszenarien.\n",
+    "\n",
+    "```{admonition} Beispiele\n",
+    ":class: tip, dropdown\n",
+    "- *Marketing*: Kunden in verschiedene Segmente aufteilen. Dadurch können Unternehmen gezieltere Werbung schalten und ihre Produkte effizienter an die verschiedenen Kundengruppen anpassen.\n",
+    "- *Bildanalyse*: ähnliche Regionen in Bildern finden. Das ist besonders nützlich für die Objekterkennung. Hierbei hilft der Algorithmus, verschiedene Objekte in einem Bild zu identifizieren und zu klassifizieren.\n",
+    "- *Biologie*: Forscher nutzen den Algorithmus, um ähnliche Gene oder Spezies zu gruppieren. Dies kann helfen, neue Erkenntnisse über genetische Verbindungen und Unterschiede zu gewinnen und die Evolution besser zu verstehen.\n",
+    "- *Textanalyse*: Zum Beispiel kann der Algorithmus eingesetzt werden, um ähnliche Dokumente oder Artikel zu gruppieren, was bei der Organisation großer Textmengen hilfreich ist. In der Finanzwelt wird k-Means genutzt, um riskante von nicht riskanten Krediten zu unterscheiden, indem ähnliche Kreditprofile gruppiert werden.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ein konkretes Beispiel: Clustering von Obstsorten\n",
     "\n",
-    "Nehmen wir an, wir haben Daten über Obstsorten mit Informationen wie Gewicht, Farbe, Wassergehalt und Fruchtzuckergehalt. Wir möchten ähnliche Obstsorten in Clustern gruppieren, sodass die Obstsorten möglichst homogen sind. k-Means analysiert die Daten, erkennt Unterschiede und Gemeinsamkeiten und bildet darauf basierend die Cluster. Zum Beispiel könnte der Algorithmus Äpfel und Bananen in unterschiedliche Cluster einteilen, da sie sich im Wasser- und Fruchtzuckergehalt unterscheiden.\n",
+    "Wir möchten uns gesünder ernähren und wollen mehr Obst essen. Die WHO empfiehlt Obst mit hohen Fruchtzuckergehalt in geringen Maßen zu genießen. Obst mit einem hohen Wassergehalt führt zu einer höheren Sättigung. Nehmen wir an, wir haben Daten über Obstsorten mit Informationen wie u.a. Wassergehalt und Fruchtzuckergehalt. Wir möchten ähnliche Obstsorten in Clustern gruppieren, sodass die Obstsorten möglichst homogen sind. Anhand der Cluster können wir dann entscheiden, welches Obst wir in welchen Mengen essen können.\n",
     "\n",
-    "In {numref}`fig_kmeans_obst` haben wir eine Sammlung von Obstsorten: 🍎 (Apfel), 🍐 (Birne), 🍌 (Banane), 🍊 (Orange), 🍇 (Weintrauben), 🍓 (Erdbeere), 🍉 (Wassermelone), 🥭 (Mango). Wir möchten diese Obstsorten basierend auf Wasser- und Fruchtzuckergehalt in Cluster aufteilen.\n",
+    "Wir spielen dieses Beispiel mal nach und schauen uns das Ergebnis an. Die zugeörigen Daten zu unseren Obstsorten sind:\n",
+    "\n",
+    "<small>\n",
+    "\n",
+    "| **Obst**       | **Wassergehalt** | **Fruchtzuckergehalt** |\n",
+    "| :------------- | :--------------- | :--------------------- |\n",
+    "| Apfel          | 85               | 10                     |\n",
+    "| Birne          | 83               | 10                     |\n",
+    "| Banane         | 75               | 12                     |\n",
+    "| Orange         | 87               | 8                      |\n",
+    "| Weintrauben    | 81               | 16                     |\n",
+    "| Erdbeere       | 91               | 5                      |\n",
+    "| Wassermelone   | 92               | 6                      |\n",
+    "| Mango          | 83               | 14                     |\n",
+    "\n",
+    "</small>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Keine übergroße Menge aber es ist schon mal nicht einfach, hier ad hoc eine konkrete Hilfestellung für unsere Obstfrage zu erhalten.\n",
+    "\n",
+    "In {numref}`fig_kmeans_obst` ist die Sammlung von Obstsorten visualisiert: 🍎 (Apfel), 🍐 (Birne), 🍌 (Banane), 🍊 (Orange), 🍇 (Weintrauben), 🍓 (Erdbeere), 🍉 (Wassermelone), 🥭 (Mango). Wir möchten diese Obstsorten nun basierend auf Wasser- und Fruchtzuckergehalt in Cluster aufteilen.\n",
     "\n",
     "```{figure} bilder/kmeans_obst.svg\n",
     "---\n",
@@ -171,30 +203,65 @@
     "align: center\n",
     "---\n",
     "Obstsorten visualisiert nach Wassergehalt und Fruchzuckergehalt\n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Aufgabe 1:** Wie würdest du die Obstsorten in Cluster aufteilen? Überlege dabei, wieviele Cluster sinnvoll wären, also welchen Wert *k* einnehmen würde.\n",
     "\n",
-    "```{admonition} Lösung\n",
+    "```{admonition} Ergebnis k-Means\n",
     ":class: tip, dropdown\n",
-    "Der k-means Algorithmus würde folgende Cluster bilden:\n",
-    "```{figure} bilder/kmeans_obst_clusters_99.svg\n",
+    "```{figure} bilder/kmeans_obst_clusters_3.svg\n",
     "---\n",
     "width: 90%\n",
-    "name: fig_kmeans_obst_99\n",
+    "name: fig_kmeans_obst_3\n",
     "align: center\n",
     "---\n",
     "k-Means-Clustering der Obstsorten mit k=3\n",
     "```\n",
     "\n",
-    "**Aufgabe 2:** Okay, wir wissen nun die Anzahl der Cluster, aber was bedeutet das nun? Versuche mal, das Ergebnis in eigenen Worten zusammenzufassen.\n",
+    "**Aufgabe 2:** Versuche mal, das Ergebnis in eigenen Worten zusammenzufassen.\n",
+    "\n",
+    "```{admonition} Beschreibung des Ergebnisses\n",
+    ":class: tip, dropdown\n",
+    "Der Algorithmus hat die Obstsorten in 3 Cluster aufgeteilt, deren Datenpunkte die folgenden Merkmale aufweisen:\n",
+    "1. 🍌 (Banane), 🍇 (Weintrauben), 🥭 (Mango): <u>hoher bis sehr hoher</u> Fruchtzuckergehalt mit <u>mittlerem</u> Wassergehalt\n",
+    "2. 🍎 (Apfel), 🍐 (Birne), 🍊 (Orange): <u>mittlerer</u> Fruchtzuckergehalt mit <u>hohem</u> Wassergehalt\n",
+    "3. 🍓 (Erdbeere), 🍉 (Wassermelone): <u>niedriger</u> Fruchtzuckergehalt mit sehr <u>hohem</u> Wassergehalt\n",
+    "```\n",
+    "\n",
+    "Hast du die Einteilung von k-Means auch so überlegt oder hattest du eine andere Vorstellung? Was hälst du denn von dieser Einteilung im Vergleich zur vorigen Lösung?\n",
+    "\n",
+    "```{admonition} Ergebnis k-Means Variante 2\n",
+    ":class: tip, dropdown\n",
+    "```{figure} bilder/kmeans_obst_clusters_42.svg\n",
+    "---\n",
+    "width: 90%\n",
+    "name: fig_kmeans_obst_42\n",
+    "align: center\n",
+    "---\n",
+    "k-Means-Clustering der Obstsorten mit k=3 Variante 2\n",
+    "```\n",
+    "\n",
+    "Überlege mal einen Moment, wie diese unterschiedlichen Ergebnisse zustande kommen können.\n",
+    "\n",
+    "```{admonition} Tipp\n",
+    ":class: tip, dropdown\n",
+    "Was könnte der [Algorithmus](#k-means-algorithmus) zu Beginn anders gemacht haben, damit unterschiedlich Ergebnisse zustande kommen?\n",
+    "```{admonition} Tipp, wenn du noch keine Idee hast\n",
+    ":class: tip, dropdown\n",
+    "Wie werden die Zentroiden initialisiert und wie kann dieses Verfahrensweise zu unterschiedliche Ergebnissen führen?\n",
+    "```\n",
     "\n",
     "```{admonition} Lösung\n",
     ":class: tip, dropdown\n",
-    "Der Algorithmus hat die Obstsorten in 3 Cluster aufgeteilt, welche die folgenden Merkmale aufweisen:\n",
-    "1. 🍌 (Banane), 🍇 (Weintrauben), 🥭 (Mango): hoher Fruchtzuckergehalt mit mittlerem Wassergehalt\n",
-    "2. 🍎 (Apfel), 🍐 (Birne), 🍊 (Orange) mittlerer Fruchtzuckergehalt mit hohem Wassergehalt\n",
-    "3. 🍓 (Erdbeere), 🍉 (Wassermelone) niedriger Fruchtzuckergehalt mit sehr hohem Wassergehalt\n",
+    "Die unterschiedlichen Ergebnisse sind eine Folge davon, dass der Algorithmus mit zufälligen Startpunkten arbeitet. Je nachdem, wo die Zentroiden am Anfang liegen, teilt der Algorithmus die Punkte unterschiedlich ein. Das zeigt, dass K-Means manchmal unterschiedliche Ergebnisse liefern kann, auch wenn die Daten gleich bleiben.\n",
+    "- Wenn ein Start-Zentroid mitten in einer dichten Datenmenge liegt, zieht er schnell viele Punkte an.\n",
+    "- Liegt ein anderer Start-Zentroid weit weg, wird er vielleicht nur wenige Punkte anziehen.\n",
+    "Der Algorithmus findet also nicht immer die 'beste' Lösung, sondern eine, die von den Startbedingungen abhängt\n",
     "```"
    ]
   },
@@ -204,14 +271,9 @@
    "source": [
     "## Ein Beispiel zum Nachrechnen\n",
     "\n",
-    "Du weißt nun, wie der Algorithmus funktioniert und was das Ergebnis ist. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
-    "{Download}`a text file<./other-file.txt>` xxx {download}`Aufgabenblatt <./aufgabenblaetter/arbeitsblatt_kmeanclustering.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 😎"
+    "Du weißt nun, wie der Algorithmus funktioniert und zu welchen Ergebnissen er führen kann. Am besten kannst du das nachvollziehen, indem du den Algorithmus selbst mal durchführst. Lade dir dieses\n",
+    "{download}`Aufgabenblatt <./kmeansclustering_aufgabenblatt.pdf>` herunter und bearbeite es. Die Anweisungen findest du dem Arbeitsblatt. Viel Erfolg 💪"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
