--- a/book/ki/kmeansclustering2.ipynb
+++ b/book/ki/kmeansclustering2.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "## Programmierung des Algorithmus\n",
     "\n",
-    "Wir werden den Algorithmus k-means- nun kleinschrittig programmieren und jeden Schritt voneinander trennen. Dabei greifen wir auf keine externen Bibliotheken wie numpy zu. Lediglich für das Plotten der Ergebnisse benötigen wir matplotlib. Wir benötigen folgende Dinge"
+    "Wir werden den k-means-Clustering Algorithmus nun kleinschrittig programmieren und jeden Schritt voneinander trennen.\n",
+    "\n",
+    "... to follow"
    ]
   }
  ],
