--- a/tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.tex
+++ b/tools_materialien_allerlei/kmeans/aufgabenblatt/kmeansclustering_aufgabenblatt.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{\textbf{Arbeitsblatt: K-Means-Clustering mit Manhattan-Distanz}}
+\title{\textbf{aufgabenblatt: K-Means-Clustering mit Manhattan-Distanz}}
 \author{}
 \date{}
 
