Shortlink mit tinyurl und alias

--- a/book/ki/kmeansclustering.ipynb
+++ b/book/ki/kmeansclustering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "```{margin}\n",
-    "Shortlink: https://shorturl.at/cpKzH\n",
+    "Shortlink: https://tinyurl.com/tgi13kmeans\n",
     "```\n",
     "\n",
     "# k-Means-Clustering\n",
